# AutoX-app

./: .gitignore  AWS_DEPLOYMENT_GUIDE.md  CLAUDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  Jenkinsfile  LICENSE  MODULE_1_TESTING_GUIDE.md  MONITORING_IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  autox-key-pairs.pem  aws-secretsmanager.json  aws-setup-helper.sh  docker-compose.aws.yml  docker-compose.monitoring.yml  docker-compose.yml  monitoring-stack-task-definition.json  package-lock.json  prometheus.aws.yml
x_automation_app/backend/: .dockerignore  .gitignore  Dockerfile  TESTING.md  config.py  env.template  front_plan_app.md  main.py  new_plan_app.md  pyproject.toml  pytest.ini  run_tests.sh  workflow_graph.md
x_automation_app/backend/app/: config.py  main.py
x_automation_app/backend/app/agents/: __init__.py  deep_research_config.py  deep_research_nodes.py  deep_researcher.py  graph.py  image_generator.py  image_generator_agent.py  image_service.py  memory.py  opinion_analysis.py  prompts.py  publicator.py  publicator_agent.py  quality_assurance.py  schemas.py  state.py  trend_harvester.py  tweet_search.py  tweet_search_agent.py  twitter_service.py  writer.py
x_automation_app/backend/app/services/: image_service.py
x_automation_app/backend/app/utils/: image.py  json_encoder.py  logging_config.py  metrics.py  metrics_manager.py  prompts.py  schemas.py  x_utils.py
x_automation_app/backend/app0/agents/: content_creator.py  image_generator.py  state.py  tools_and_schemas.py  utils.py
x_automation_app/backend/app0/services/: image_service.py
x_automation_app/backend/new_app/: main.py
x_automation_app/backend/new_app/agents/: configuration.py  deep_researcher.py  graph.py  image_generator_agent.py  opinion_analysis_agent.py  prompts.py  publicator_agent.py  quality_assurance_agent.py  state.py  tools_and_schemas.py  trend_harvester.py  tweet_search_agent.py  writer_agent.py
x_automation_app/backend/new_app/services/: image_service.py  tweet_chunking.py  twitter_service.py  twitter_services.py
x_automation_app/backend/services/: twitter_service.py
x_automation_app/backend/tests/: __init__.py  conftest.py
x_automation_app/backend/tests/test_api/: test_auth.py  test_health.py  test_workflow.py
x_automation_app/backend/tests/test_graph/: __init__.py  test_nodes.py  test_routing.py
x_automation_app/backend/tests/test_state/: __init__.py  (+1 more)
x_automation_app/backend/x_langgraph_agents/: main.py
(+125 files in other folders)
