[project]
name = "backend"
version = "0.1.0"
description = "X Automation Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.35",
    "botocore>=1.38.35",
    "colorlog>=6.9.0",
    "composio-core>=0.7.16",
    "composio-langchain>=0.7.16",
    "composio-langgraph>=0.7.4",
    "composio-openai>=0.7.16",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "google-genai>=1.20.0",
    "httpx>=0.28.1",
    "jupyter>=1.1.1",
    "langchain>=0.3.25",
    "langchain-anthropic>=0.3.15",
    "langchain-google-genai>=2.1.5",
    "langchain-groq>=0.3.2",
    "langchain-openai>=0.3.22",
    "langgraph>=0.4.8",
    "langmem>=0.0.27",
    "load-dotenv>=0.1.0",
    "openai>=1.86.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "rich>=13.9.4",
    "uvicorn>=0.34.3",
]
