[project]
name = "backend"
version = "0.1.0"
description = "X Automation Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3",
    "botocore",
    "colorlog",
    "composio-core",
    "composio-langchain",
    "composio-langgraph",
    "composio-openai",
    "dotenv",
    "fastapi",
    "google-genai",
    "httpx",
    "jupyter",
    "langchain[google-genai,openai]",
    "langchain-anthropic",
    "langchain-google-genai",
    "langchain-groq",
    "langchain-openai",
    "langgraph",
    "langmem",
    "load-dotenv",
    "openai",
    "prometheus-client",
    "prometheus-fastapi-instrumentator",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "python-dotenv",
    "requests",
    "rich",
    "uvicorn",
]
